Added connect-timeout package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Translate a JSON object into different languages",
   "main": "index.js",
   "dependencies": {
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "puppeteer": "^10.2.0",
